--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "vuetify-nuxt-module": "^0.18.3"
   }
 }
