--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/google-fonts": "^3.2.0",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
