--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/google-fonts": "^3.2.0",
     "nuxt": "^3.13.0",
+    "nuxt-countdown": "^1.2.0",
     "vue": "latest",
     "vue-router": "latest"
   },
