--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nuxt": "^3.13.0",
     "nuxt-countdown": "^1.2.0",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue3-toastify": "^0.2.4"
   },
   "devDependencies": {
     "vuetify-nuxt-module": "^0.18.3"
