--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/google-fonts": "^3.2.0",
+    "moment": "^2.30.1",
     "nuxt": "^3.13.0",
     "nuxt-countdown": "^1.2.0",
     "vue": "latest",
